--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -75,7 +75,7 @@
   justify-content: center
   overflow: hidden
   position: fixed
-  z-index: 1986
+  z-index: 20
   // Modifiers
   &.is-active
     display: flex
